  [25423] libc: Array overflow in backtrace on powerpc
  [25425] network: Missing call to __resolv_context_put in
    getaddrinfo.c:gethosts


Version 2.30

Major new features:

* Implementation of vector math library libmvec on PPC64/POWER8.

  The following functions now have vector versions.
  - double-precision cosine: cos
  - single-precision cosine: cosf
  - double-precision logarithm: log
  - double-precision sine: sin
  - single-precision sine: sinf
  - double-precision sincos: sincos
  - single-precision sincos: sincosf

  GCC support for auto-vectorization of functions on PPC64 is not yet
  available. Until that is done, the new vector math functions are
  inaccessible to applications.

  Library libmvec is built by default for PPC64. Disable its creation by
  passing flag --disable-mathvec to configure.

  The library ABI specification is x86_64 Vector Function ABI.
  More information on libmvec including a link to the ABI document is at:
  <https://sourceware.org/glibc/wiki/libmvec>

* Unicode 12.1.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 12.1.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* The dynamic linker accepts the --preload argument to preload shared
  objects, in addition to the LD_PRELOAD environment variable.

* The twalk_r function has been added.  It is similar to the existing
  twalk function, but it passes an additional caller-supplied argument
  to the callback function.

* On Linux, the getdents64, gettid, and tgkill functions have been added.

* Minguo (Republic of China) calendar support has been added as an
  alternative calendar for the following locales: zh_TW, cmn_TW, hak_TW,
  nan_TW, lzh_TW.

* The entry for the new Japanese era has been added for ja_JP locale.

* Memory allocation functions malloc, calloc, realloc, reallocarray, valloc,
  pvalloc, memalign, and posix_memalign fail now with total object size